[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "example/io_plugin/io_plugin",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
polars = { git = "https://github.com/sushi009/polars", rev = "16a61f1a94d44a16bb629a5192a877b4109a58eb", default-features = false }
polars-core = { git = "https://github.com/sushi009/polars", rev = "16a61f1a94d44a16bb629a5192a877b4109a58eb", default-features = false }
polars-ffi = { git = "https://github.com/sushi009/polars", rev = "16a61f1a94d44a16bb629a5192a877b4109a58eb", default-features = false }
polars-plan = { git = "https://github.com/sushi009/polars", rev = "16a61f1a94d44a16bb629a5192a877b4109a58eb", default-feautres = false }
polars-lazy = { git = "https://github.com/sushi009/polars", rev = "16a61f1a94d44a16bb629a5192a877b4109a58eb", default-features = false }

[workspace.dependencies.arrow]
package = "polars-arrow"
version = "0.44.0"
path = "../polars/crates/polars-arrow"
default-features = false

#[patch.crates-io]
#polars = { git = "https://github.com/pola-rs/polars.git" }
#polars-core = { git = "https://github.com/pola-rs/polars.git" }
#polars-ffi = { git = "https://github.com/pola-rs/polars.git" }
#polars-plan = { git = "https://github.com/pola-rs/polars.git" }
#polars-lazy = { git = "https://github.com/pola-rs/polars.git" }
