[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "example/io_plugin/io_plugin",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
polars = { git = "https://github.com/sushi009/polars", rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4", default-features = false }
polars-core = { git = "https://github.com/sushi009/polars", rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4", default-features = false }
polars-ffi = { git = "https://github.com/sushi009/polars", rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4", default-features = false }
polars-plan = { git = "https://github.com/sushi009/polars", rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4", default-feautres = false }
polars-lazy = { git = "https://github.com/sushi009/polars", rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4", default-features = false }

[workspace.dependencies.arrow]
package = "polars-arrow"
git = "https://github.com/sushi009/polars"
rev = "9a17c59b2bdb57271a7337e4c0c5e57e6e043ea4"
default-features = false
# version = "0.45.0"
# path = "../polars/crates/polars-arrow"

#[patch.crates-io]
#polars = { git = "https://github.com/pola-rs/polars.git" }
#polars-core = { git = "https://github.com/pola-rs/polars.git" }
#polars-ffi = { git = "https://github.com/pola-rs/polars.git" }
#polars-plan = { git = "https://github.com/pola-rs/polars.git" }
#polars-lazy = { git = "https://github.com/pola-rs/polars.git" }
